--- a/10H/10H/Views/AdminMusic/Create.cshtml
+++ b/10H/10H/Views/AdminMusic/Create.cshtml
@@ -5,12 +5,12 @@
 }
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Add music";
 }
 
-<h2>Create</h2>
+<h2>Add music</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "AdminMusic", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
@@ -66,12 +66,8 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Number, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Number, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Number, "", new { @class = "text-danger" })
-            </div>
+        <div>
+            <input type="file" name="MusicFile" /><br />
         </div>
 
         <div class="form-group">
