--- a/10H/10H/Views/Shared/_Layout.cshtml
+++ b/10H/10H/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width" />
     <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/search.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/purchase.css" rel="stylesheet" type="text/css" />
+
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
