--- a/10H/10H/Views/Home/Index.cshtml
+++ b/10H/10H/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using (Html.BeginForm("Index", "AdminMusic", FormMethod.Post))
+﻿@using (Html.BeginForm("Index", "Purchase", FormMethod.Post))
 {
 @Html.AntiForgeryToken()
 
