--- a/10H/10H/Content/search.css
+++ b/10H/10H/Content/search.css
@@ -25,5 +25,24 @@
   margin-left: 17px;
   margin-top: 15px;
   z-index: 1;
-  color: #fffff;
+  color: #ffffff;
+}
+
+.login-container{
+    margin-left: 30% !important;
+    width: 50%;
+}
+
+.login-container-minus{
+    margin: auto;
+    border: 3px solid #eeeeee;
+    border-radius: 15px;
+     width: 80% !important;
+}
+h2{
+    text-align: center;
+}
+
+.container{
+    background-image: url("/Ressources/Images/background.jpg");
 }
