--- a/10H/10H/Views/User/Login.cshtml
+++ b/10H/10H/Views/User/Login.cshtml
@@ -5,10 +5,11 @@
 @{
     ViewBag.Title = "Login";
 }
-
+@Styles.Render("~/Content/css")
+@Scripts.Render("~/bundles/modernizr")
 <h2>@ViewBag.Title.</h2>
-<div class="row">
-    <div class="col-md-8">
+<div class="row login-container">
+    <div class="col-md-8 login-container-minus">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "User", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
