--- a/10H/10H/Content/search.css
+++ b/10H/10H/Content/search.css
@@ -43,6 +43,9 @@ h2{
     text-align: center;
 }
 
-.container{
-    background-image: url("/Ressources/Images/background.jpg");
+.image{
+    background-image: url("Ressources/Images/background.jpg");
+    background-size: 100% 100%;
+    width: 100%;
+    height: 100%;
 }
