--- a/10H/10H/Content/search.css
+++ b/10H/10H/Content/search.css
@@ -31,6 +31,7 @@
 .login-container{
     margin-left: 30% !important;
     width: 50%;
+    margin-top: 5% !important;
 }
 
 .login-container-minus{
@@ -41,11 +42,13 @@
 }
 h2{
     text-align: center;
+    margin-top: 5% !important;
 }
 
 .image{
     background-image: url("Ressources/Images/background.jpg");
     background-size: 100% 100%;
-    width: 100%;
-    height: 100%;
+    max-width: 100% !important;
+    max-height: 100% !important;
+    min-height: 600px;
 }
