--- a/10H/10H/Views/Home/Index.cshtml
+++ b/10H/10H/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@Scripts.Render("~/bundles/jquery")
+﻿@model ViewModels.MusicsResponseVM
+
+@Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
 
 
@@ -32,16 +34,15 @@
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 <div class="row">
+    <h2>Most Popular</h2>
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
+        <img class="trending" src="~/Content/Ressources/Images/Albums/1.png"/>
+        <p>@Model.Music1.Name</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <img class="trending" src="~/Content/Ressources/Images/Albums/2.png" />
+        <p>@Model.Music2.Name</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
