--- a/10H/10H/Views/Home/Index.cshtml
+++ b/10H/10H/Views/Home/Index.cshtml
@@ -18,6 +18,10 @@
         }
     }
 
+    function goToDetails(id) {
+        window.location.href = '/AdminMusic/Details/' + id;
+    }
+
 </script>
     <div class="box">
         <div class="container-1">
@@ -34,20 +38,26 @@
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 <div class="row">
-    <h2>Most Popular</h2>
+    <h2 style="border-bottom:1px solid #eeeeee;">Most Popular</h2>
     <div class="col-md-4">
-        <img class="trending" src="~/Content/Ressources/Images/Albums/1.png"/>
-        <p>@Model.Music1.Name</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
+        <div class="populars">
+            <img class="trending" src="~/Content/Ressources/Images/Albums/1.png" />
+            <p>@Model.Music1.Name</p>
+            <p><a class="btn btn-default" onclick="goToDetails(@Model.Music1.ID);">Details </a></p>
+        </div>
     </div>
     <div class="col-md-4">
-        <img class="trending" src="~/Content/Ressources/Images/Albums/2.png" />
-        <p>@Model.Music2.Name</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
+        <div class="populars">
+            <img class="trending" src="~/Content/Ressources/Images/Albums/2.png" />
+            <p>@Model.Music2.Name</p>
+            <p><a class="btn btn-default" onclick="goToDetails(@Model.Music2.ID);">Details </a></p>
+        </div>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
+        <div class="populars">
+            <h2>Web Hosting</h2>
+            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+            <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
+        </div>
     </div>
 </div>
