--- a/10H/10H/Content/search.css
+++ b/10H/10H/Content/search.css
@@ -124,3 +124,9 @@ a{
    color: orange !important;
    cursor: pointer;
 }
+
+#newComment{
+        margin: auto;
+    width: 100%;
+    max-width: 100% !important;
+}
