--- a/10H/10H/Views/AdminMusic/Create.cshtml
+++ b/10H/10H/Views/AdminMusic/Create.cshtml
@@ -66,25 +66,23 @@
             </div>
         </div>
 
-        @Html.DropDownList("Album",
-                    new SelectList(
-                        Model.Albums.Select(a => new { ID = a, Name = a }),
-                        "ID",
-                        "Name"
-                    ),
-                    "Select Album",
-                    new { @class = "form-control" })
-
-        <div><p>Fichier audio :</p>
-            <input type="file" name="MusicFile" /><br />
-        </div>
-
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-10">
+                @Html.DropDownListFor(a => a.selectedAlbumID, Model.AlbumTemplate, "Choisir album", new { @class = "form-control" })
             </div>
         </div>
-    </div>
+
+            <div>
+                <p>Fichier audio :</p>
+                <input type="file" name="MusicFile" /><br />
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Create" class="btn btn-default" />
+                </div>
+            </div>
+        </div>
 }
 
 <div>
