--- a/10H/10H/Views/AdminMusic/Details.cshtml
+++ b/10H/10H/Views/AdminMusic/Details.cshtml
@@ -26,13 +26,13 @@
             @Html.DisplayFor(model => model.Artist)
         </dd>
 
-        @*<dt>
-            @Html.DisplayNameFor(model => model.AlbumID)
+        <dt>
+            @Html.DisplayNameFor(model => model.Album.Name)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.AlbumID)
-        </dd>*@
+            @Html.DisplayFor(model => model.Album.Name)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.ReleaseDate)
         </dt>
