--- a/10H/10H/Content/search.css
+++ b/10H/10H/Content/search.css
@@ -124,3 +124,11 @@ a{
    color: orange !important;
    cursor: pointer;
 }
+
+.logo{
+     background: url("Ressources/Images/logo.png") no-repeat top left;
+     display: block;
+     width: 150px;
+     height: 150px;
+     text-indent: -9999px; /* hides the link text */
+}
