--- a/10H/10H/Views/Purchase/BuyConfirmation.cshtml
+++ b/10H/10H/Views/Purchase/BuyConfirmation.cshtml
@@ -8,7 +8,7 @@
 
 <div>
     <p>
-        Thank you for buying @Model.Music.Name on 10H !
+        Thank you for buying @Model.Music1.Name on 10H !
     </p> <br />
     <p>We hope to see you again soon !!</p>
 </div>
