--- a/10H/10H/Content/search.css
+++ b/10H/10H/Content/search.css
@@ -125,8 +125,13 @@ a{
    cursor: pointer;
 }
 
-#newComment{
+#comment{
         margin: auto;
     width: 100%;
     max-width: 100% !important;
+}
+
+.btn-comment{
+      margin-top: 1%;
+      margin-left: 45%;
 }
