--- a/10H/10H/Content/search.css
+++ b/10H/10H/Content/search.css
@@ -92,9 +92,9 @@ dd , p{
     font-family:'Brush Script MT';
 }
 
-a{
+/*a{
     color: white !important;
-}
+}*/
 .rating {
     direction: rtl;
     text-align:left;
@@ -130,18 +130,67 @@ a{
     width: 100%;
     max-width: 100% !important;
 }
-}
+
 
 .logo{
      background: url("Ressources/Images/logo.png") no-repeat top left;
      display: block;
-     width: 150px;
-     height: 150px;
+     width: 50px;
+     height: 50px;
      text-indent: -9999px; /* hides the link text */
+     background-size: 50px 50px;
+
+
 }
-}
+
 
 .btn-comment{
       margin-top: 1%;
       margin-left: 45%;
 }
+
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
