--- a/10H/10H/Content/search.css
+++ b/10H/10H/Content/search.css
@@ -1,4 +1,9 @@
-﻿.container-1{
+﻿body{
+        font-family:'Brush Script MT' !important;
+        font-size: 21px !important;
+}
+
+.container-1{
   width: 300px;
   vertical-align: middle;
   white-space: nowrap;
@@ -152,7 +157,7 @@ dd , p{
 
 /* Dropdown Button */
 .dropbtn {
-    background-color: #4CAF50;
+    background-color: rgb(104, 33, 122);
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -162,7 +167,8 @@ dd , p{
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
+    background-color: rgb(59, 18, 70);
+
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -175,7 +181,7 @@ dd , p{
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: rgb(104, 33, 122);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -183,7 +189,7 @@ dd , p{
 
 /* Links inside the dropdown */
 .dropdown-content a {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
