--- a/10H/10H/Views/AdminMusic/Edit.cshtml
+++ b/10H/10H/Views/AdminMusic/Edit.cshtml
@@ -75,10 +75,10 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.Mark, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.Music1.Mark, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Mark, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Mark, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.Music1.Mark, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Music1.Mark, "", new { @class = "text-danger" })
             </div>
         </div>
 
