--- a/10H/10H/Views/AdminMusic/Index.cshtml
+++ b/10H/10H/Views/AdminMusic/Index.cshtml
@@ -4,6 +4,15 @@
     ViewBag.Title = "Index";
 }
 
+<script type="text/javascript">
+
+    function BuyMusic(id)
+    {
+
+        window.location.href = "/Order/Buy/"+id;
+    }
+</script>
+
 <h2>Index</h2>
 
 <p>
@@ -20,39 +29,44 @@
         <th>Album</th>
     </tr>
 
-    @foreach (var item in Model.Musics)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Artist)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReleaseDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Duration)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Album.Name)
-            </td>
-            <td>
-                <audio controls>
+        @foreach (var item in Model.Musics)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Artist)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ReleaseDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Genre)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Duration)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Album.Name)
+                </td>
+                <td>
+                    <audio controls>
                         <source src="@Url.Action("Play", new { musicId = item.Number })" type="audio/mp3" />
                         <p>Your browser does not support HTML 5 audio element</p>
-                </audio>
-                @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.ID })
-            </td>
+                    </audio>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.ID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+                </td>
+                <td>
+                    <form name="Buy" method="post">
+                        <button type="button" style="display:inline-block" class="btn btn-primary btn-sm buy-btn" onclick="BuyMusic(@item.ID);">Buy</button>
+                    </form>
+                </td>
         </tr>
     }
 
