--- a/10H/10H/Views/Home/Index.cshtml
+++ b/10H/10H/Views/Home/Index.cshtml
@@ -70,7 +70,7 @@
                 {
                     for (int j = 0; j < @Math.Round(Model.Music1.Mark); j++)
                     {
-                        <a class="full" style="cursor:pointer" onclick="SendMark(@Model.Music1.ID, @Math.Round(Model.Music1.Mark) - @j);">★</a>
+                        <a class="full" style="cursor:pointer" onclick="SendMark(@Model.Music1.ID,  @j+1);">★</a>
                     }
                     for (int j = 0; j < 5 -@Math.Round( Model.Music1.Mark); j++)
                     {
@@ -96,6 +96,29 @@
                 <img class="trending" src="~/Content/Ressources/Images/Albums/2.png" />
                 <p>@Model.Music2.Name</p>
                 <p><a class="btn btn-default" onclick="goToDetails(@Model.Music2.ID);">Details </a></p>
+                @if (@Request.Cookies["userId"] != null)
+                {
+                    for (int j = 0; j < @Math.Round(Model.Music2.Mark); j++)
+                    {
+                        <a class="full" style="cursor:pointer" onclick="SendMark(@Model.Music2.ID,  @j+1);">★</a>
+                    }
+                    for (int j = 0; j < 5 - @Math.Round(Model.Music2.Mark); j++)
+                    {
+                        <a class="empty" style="cursor:pointer" onclick="SendMark(@Model.Music2.ID, 5-@j);">★</a>
+                    }
+                }
+                else
+                {
+                    for (int j = 0; j < @Math.Round(Model.Music2.Mark); j++)
+                    {
+                        <a class="full">★</a>
+                    }
+                    for (int j = 0; j < @Math.Round(5 - Model.Music2.Mark); j++)
+                    {
+                        <a class="empty">★</a>
+                    }
+                }
+                <a style="cursor:pointer" onclick="GoToComments(@Model.Music2.ID);">@Model.Music2.NumberOfComments Comments</a>
             </div>
         </div>
         <div class="col-md-4">
