--- a/10H/10H/Views/Music/Index.cshtml
+++ b/10H/10H/Views/Music/Index.cshtml
@@ -41,7 +41,7 @@
 </div>
 
 <div id="divMusics">
-    @{Html.RenderPartial("_Musics", Model.Musics);}
+    @{Html.RenderPartial("_Musics", Model);}
 </div>
 
 
