--- a/10H/10H/Views/Home/Index.cshtml
+++ b/10H/10H/Views/Home/Index.cshtml
@@ -53,12 +53,13 @@
 </td>*@
 <td>
 
-    <div class="jumbotron">
+    <!--<div class="jumbotron">
         <h1>ASP.NET</h1>
         <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
         <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-    </div>
-    <div class="row">
+    </div>-->
+    <div class="row jumbotron">
+        <h1 class="text-center">Welcome to 10H</h1>
         <h2 style="border-bottom:1px solid #eeeeee;">Most Popular</h2>
         <div class="col-md-4">
             <div class="populars">
