--- a/10H/10H/Views/Shared/_Layout.cshtml
+++ b/10H/10H/Views/Shared/_Layout.cshtml
@@ -32,10 +32,11 @@
                 {
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Musics", "Index", "Music", new { area = "" }, null)</li>
-                        @if (Request.Cookies["UserId"]["roleId"] == "1") {
-                        <li>@Html.ActionLink("Musics", "Index", "AdminMusic", new { area = "" }, null)</li>
+                        @if (Request.Cookies["UserId"]["roleId"] == "1")
+                        {
+                        <li>@Html.ActionLink("Manage Musics", "Index", "AdminMusic", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("Albums", "Index", "AdminAlbum", new { area = "" }, null)</li>
-
+                        }
                     </ul>
                 }
                 else
