--- a/10H/10H/Views/AdminMusic/Details.cshtml
+++ b/10H/10H/Views/AdminMusic/Details.cshtml
@@ -3,7 +3,32 @@
 @{
     ViewBag.Title = "Details";
 }
+<script type="text/javascript">
 
+    function BuyMusic(id)
+    {
+
+        window.location.href = "/Purchase/BuyConfirmation/"+id;
+    }
+    function GoToComments(id) {
+        window.location.href = '/Comment/AddComment/' + id;
+    }
+    function SendMark(Musicid, mark)
+    {
+        var comment = {
+            User : null,
+            MusicID : Musicid,
+            Comments : null,
+            Note : mark,
+        };
+        $.ajax({
+            url: '/Comment/Mark',
+            type: 'post',
+            data: comment
+        });
+    }
+
+</script>
 <h2>Details</h2>
 
 <div class="details">
@@ -69,6 +94,36 @@
         <source src="@Url.Action("Play", new { musicId = Model.Number })" type="audio/mp3" />
         <p>Your browser does not support HTML 5 audio element</p>
     </audio>
+
+    <form name="Buy" method="post" style="margin-left:40%">
+        <button type="button" style="display:inline-block" class="btn btn-primary btn-sm buy-btn-details" onclick="BuyMusic(@Model.ID);">Buy</button>
+    </form>
+    <div style="margin-left: 30%";>
+        @if (@Request.Cookies["userId"] != null)
+        {
+            for (int j = 0; j < @Math.Round(Model.Mark); j++)
+            {
+                <a class="full" style="cursor:pointer" onclick="SendMark(@Model.ID,  @j+1);">★</a>
+            }
+            for (int j = 0; j < 5 - @Math.Round(Model.Mark); j++)
+            {
+                <a class="empty" style="cursor:pointer" onclick="SendMark(@Model.ID, @Math.Round(Model.Mark)+@j+1);">★</a>
+            }
+        }
+        else
+        {
+            for (int j = 0; j < @Math.Round(Model.Mark); j++)
+            {
+                <a class="full">★</a>
+            }
+            for (int j = 0; j < @Math.Round(5 - Model.Mark); j++)
+            {
+                <a class="empty">★</a>
+            }
+        }
+        <a style="cursor:pointer;margin-left:5%;" onclick="GoToComments(@Model.ID);">@Model.NumberOfComments Comments</a>
+    </div>
+   
 </div>
 <p style="text-align:center;color:#333333">
     @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
